dark mode profile fix

--- a/src/app/components/cms/admin-shell/admin-navbar/components/UserButton/UserButton.module.css
+++ b/src/app/components/cms/admin-shell/admin-navbar/components/UserButton/UserButton.module.css
@@ -11,7 +11,7 @@ SPDX-License-Identifier: MPL-2.0
 }
 
 .userButton:hover {
-  background-color: var(--mantine-color-gray-0);
+    background-color: var(--mantine-color-default-hover);
 }
 
 .userInfo {
